RESOLVED FIXED116234
JSValue shouldn't protect/unprotect its context
https://bugs.webkit.org/show_bug.cgi?id=116234
Summary JSValue shouldn't protect/unprotect its context
Geoffrey Garen
Reported 2013-05-16 11:07:26 PDT
JSValue shouldn't protect/unprotect its context
Attachments
Patch (1.31 KB, patch)
2013-05-16 11:08 PDT, Geoffrey Garen
mhahnenberg: review+
Geoffrey Garen
Comment 1 2013-05-16 11:08:17 PDT
Mark Hahnenberg
Comment 2 2013-05-16 11:08:51 PDT
Comment on attachment 201974 [details] Patch r=me
Geoffrey Garen
Comment 3 2013-05-16 12:11:05 PDT
Note You need to log in before you can comment on or make changes to this bug.