JSValue shouldn't protect/unprotect its context https://bugs.webkit.org/show_bug.cgi?id=116234

Reviewed by Mark Hahnenberg.

Our retain on _context is sufficient.

* API/JSValue.mm:
(-[JSValue initWithValue:inContext:]):
(-[JSValue dealloc]):


Canonical link: https://commits.webkit.org/134623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150199 268f45cc-cd09-0410-ab3c-d52691b4dbfc